# rec-TDS

./: README.md
rec-tds/: pyproject.toml
rec-tds/rec_tds/: app.py  functions.py  locacao.py  user.py  veiculo.py
rec-tds/rec_tds/static/: busca.css  logins.css  style.css  veiculo.css
rec-tds/rec_tds/templates/: cadastro.html  cadastro.js  cadveiculo.html  index.html  locacao.html  login.html  login.js  main.html  novasenha.html
