[tool.poetry]
name = "rec-tds"
version = "0.1.0"
description = ""
authors = ["Joel Kagohara Sasaki <126785821+JoelKSasaki@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
